--- a/programs/vestingroyale/Cargo.toml
+++ b/programs/vestingroyale/Cargo.toml
@@ -16,5 +16,6 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = { version ="0.28.0", features=["init-if-needed"] }
-anchor-spl = "0.28.0"
+anchor-lang = { version ="0.29.0", features=["init-if-needed"] }
+anchor-spl = "0.29.0"
+ahash = "=0.8.11"
