--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,3 +1,6 @@
+[toolchain]
+solana_version = "1.18.4"
+
 [features]
 seeds = false
 skip-lint = false
@@ -9,7 +12,7 @@ url = "https://api.apr.dev"
 
 [provider]
 cluster = "Localnet"
-wallet = "/Users/r0bre/.config/solana/id.json"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
